--- a/TP1/exemple_prepa_features_iris.ipynb
+++ b/TP1/exemple_prepa_features_iris.ipynb
@@ -455,9 +455,9 @@
    "source": [
     "from IPython.display import Markdown, display, HTML\n",
     "\n",
-    "display(Markdown('<span style=\"color:blue;font-weight:bold\">Ceci est le titre</span>'))\n",
+    "display(HTML('<span style=\"color:blue;font-weight:bold\">Ceci est le titre</span>'))\n",
     "display(HTML(mon_petit_dataframe.to_html()))\n",
-    "display(Markdown('<span style=\"color:blue;font-weight:bold\">----- Fin ----- </span>'))"
+    "display(HTML('<span style=\"color:blue;font-weight:bold\">----- Fin ----- </span>'))"
    ]
   }
  ],
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
