fix comments error

--- a/TP1/tp1_prepa_feature.ipynb
+++ b/TP1/tp1_prepa_feature.ipynb
@@ -165,7 +165,7 @@
     "_uuid": "f02533e7b85bba0cca7fcf2cc598c8da92d7646d"
    },
    "source": [
-    "2.2 Analyser l'effet de la variable Genre (Sex) sur le taux de survie, en affichant le % de survie par classe"
+    "2.2 Analyser l'effet de la variable Genre (Sex) sur le taux de survie, en affichant le % de survie par genre"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.8 Analyser l'effet de ces catégories de prix de ticket sur la survie."
+    "3.8 Analyser l'effet de ces catégories d'age sur la survie."
    ]
   },
   {
