--- a/TP2/tp2_Titanic_RF.ipynb
+++ b/TP2/tp2_Titanic_RF.ipynb
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fonction Utilitaires (cadeau de la maison)"
+    "## Fonction Utilitaires"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2 Appliquer le modèle sur vos données de dev"
+    "2.2 Appliquer le modèle sur vos données de Dev. Afficher la précision score."
    ]
   },
   {
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3 : Affichez l'arbre"
+    "2.4 : Affichez l'arbre"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.4 Générez le fichier de résultats et envoyer une soumission sur Kaggle"
+    "2.5 Générez le fichier de résultats et envoyer une soumission sur Kaggle"
    ]
   },
   {
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.5 Question : Quel est votre meilleur score et Classement ?"
+    "2.6 Question : Quel est votre meilleur score et Classement ?"
    ]
   },
   {
@@ -301,9 +301,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -331,14 +329,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "generer_resultats(rnd_clf)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercice 3 : Affichage de résultats\n",
-    "3.1 En utilisant la fonction plot_decision_boundary, afficher les résultats pour de l'arbre seul et du modèle de forêt les variables Fare et Title"
+    "3.5 En utilisant la fonction plot_decision_boundary, afficher les résultats pour de l'arbre seul et du modèle de forêt les variables Fare et Title"
    ]
   },
   {
@@ -403,7 +402,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "generer_resultats(gbes)"
+   ]
   }
  ],
  "metadata": {
