update comment ex6

--- a/TP2/Cours2_ex6_Boosting.ipynb
+++ b/TP2/Cours2_ex6_Boosting.ipynb
@@ -215,12 +215,18 @@
     "\n",
     "n_estimators=500\n",
     "\n",
-    "# Si pas d'amélioration > 0.01 sur les 5 derniers estimateurs => Arrêt\n",
-    "gbes = GradientBoostingClassifier(n_estimators=n_estimators,\n",
-    "                                           n_iter_no_change=5, tol=0.0001,\n",
-    "                                            random_state=0)\n",
-    "gb = GradientBoostingClassifier(n_estimators=n_estimators,\n",
-    "                                         random_state=0)\n",
+    "# Si pas d'amélioration > 0.0001 sur les 5 derniers estimateurs => Arrêt\n",
+    "gbes = GradientBoostingClassifier(\n",
+    "    n_estimators=n_estimators,   \n",
+    "    n_iter_no_change=5, \n",
+    "    tol=0.0001,\n",
+    "    random_state=0\n",
+    "    )\n",
+    "gb = GradientBoostingClassifier(\n",
+    "    n_estimators=n_estimators,\n",
+    "    random_state=0\n",
+    "    )\n",
+    "    \n",
     "start = time.time()\n",
     "gb.fit(X_train, y_train)\n",
     "time_gb=(time.time() - start)\n",
