--- a/TP3/tp3_titanic-pytorch.ipynb
+++ b/TP3/tp3_titanic-pytorch.ipynb
@@ -270,7 +270,8 @@
     "_uuid": "21b294d4940218f5d2bef3782aca9a6ba6e9c054"
    },
    "source": [
-    "3.5 Exécuter une Cross Validationd ans une boucle pour trouver les meilleures valeurs de learning rate, de keep_prob et de nombre d'epochs. (Optionnel)\n",
+    "3.5 (Optionnel) Exécuter une Cross Validationd ans une boucle pour trouver les meilleures valeurs de learning rate, de keep_prob et de nombre d'epochs.\n",
+    "\n",
     "Cross_Validation avec skkearn : https://scikit-learn.org/stable/modules/cross_validation.html#cross-validation-iterators"
    ]
   },
